<resources>
    <string name="app_name">AcademiaUMB</string>
    <string name="errorInesperado">Error inesperado</string>
    <string name="menuAsignatura">Asignaturas</string>
    <string name="menuCalculadora">Calculadora</string>
    <string name="menuHorario">Horario</string>
    <string name="menuAgenda">Agenda</string>
    <string name="menuProfesor">Profesor</string>
    <string name="menuAnotaciones">Anotaciones</string>
    <string name="decripcionMenuIcono">Icono de navegacion del menu</string>
    <string name="decripcionFormularioIcono">Icono de formulario</string>
    <string name="formularioAsignaturas">Agregar asignatura</string>
    <string name="formularioProfesor">Nombre del profesor</string>
    <string name="formularioSalon">Salon de clases</string>
    <string name="formularioColor">Agregar color</string>
    <string name="formularioDetalles">Detalles</string>
    <string name="btnGuardar">GUARDAR</string>
    <string name="errorFormularioAsignaturaVacia">El nombre de la asignatura es obligatorio</string>
    <string name="errorFormularioColorVacio">El color es un campo obligatorio</string>
    <string name="errorAsignaturaRepetida">Esta asignatura ya existe</string>
    <string name="corte1">Corte: 1</string>
    <string name="corte2">Corte: 2</string>
    <string name="corte3">Corte: 3</string>
    <string name="porcentaje">%</string>
    <string name="hntPorcentaje">%</string>
    <string name="hntNota">Nota</string>
    <string name="diasProgramdos">Dias que tienes esta Materia:</string>
    <string name="lunes">LUN</string>
    <string name="martes">MAR</string>
    <string name="miercoles">MIE</string>
    <string name="jueves">JUE</string>
    <string name="viernes">VIE</string>
    <string name="sabado">SAB</string>
    <string name="domingo">DOM</string>
    <string name="btnMostrarMas">MOSTRAR MAS</string>
    <string name="correo">Correo:</string>
    <string name="telefono">Telefono:</string>
    <string name="hintNombreProfesor">Nombre del profesor</string>
    <string name="hintCorreElectronico">Correo electronico</string>
    <string name="hintTelefono">Numero de telefono</string>
    <string name="cancelar">CANCELAR</string>
    <string name="funcionAgregar">agregar</string>
    <string name="funcionModificar">modificar</string>
    <string name="agregar">AGREGAR</string>
    <string name="modificar">MODIFICAR</string>
    <string name="agregarAsignatura">Asignatura</string>
    <string name="horaInicio">Hora de inicio</string>
    <string name="horaSalida">Hora de salida</string>
    <string name="calculoRapido">HACER CALCULO</string>
    <string name="porcentaNoValido">La suma de los porcentajes dene ser 100</string>
    <string name="notaNoValida">La nota no es valida</string>
    <string name="resultado">El resultado es:</string>
    <string name="title_activity_agenda">Agenda</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="actividades">Actividades</string>
    <string name="examenes">Examenes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tipoExamen">examen</string>
    <string name="tipoActividad">actividad</string>
    <string name="titulo">Titulo</string>
    <string name="fechaEntrega">Fecha</string>
    <string name="actividad">Tipo</string>
    <string name="TituloTema">Titulo del tema</string>
    <string name="descripcion">Descripcion</string>
    <string name="profesoresTitulo">Profesores</string>
    <string name="tituloAgenda">Agenda</string>
    <string name="calculadoraTitulo">Calculadora</string>
    <string name="asignaturasTitulo">Asignaturas</string>
    <string name="agregarAsignaturaTitulo">Agregar asignatura</string>
    <string name="AgendaTitulo">Agenda</string>
</resources>
