<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/espacioLateralFormulario">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/paddingCardView">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/formularioEspacioIconoTxt"
                android:paddingLeft="@dimen/paddingCardView"
                android:paddingRight="@dimen/paddingCardView"
                android:text="@string/diasProgramdos" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/paddingCardView"
                android:paddingRight="@dimen/paddingCardView">

                <TextView
                    android:id="@+id/tvLunes"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/espacioDias"
                    android:layout_marginBottom="@dimen/espacioDias"
                    android:background="@drawable/valor_apagado"
                    android:gravity="center"
                    android:text="@string/lunes"

                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvMartes"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/espacioDias"
                    android:background="@drawable/valor_apagado"
                    android:gravity="center"
                    android:text="@string/martes"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvMiercoles"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/espacioDias"
                    android:background="@drawable/valor_apagado"
                    android:gravity="center"
                    android:text="@string/miercoles"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvJueves"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/espacioDias"
                    android:background="@drawable/valor_apagado"
                    android:gravity="center"
                    android:text="@string/jueves"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvViernes"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/espacioDias"
                    android:background="@drawable/valor_apagado"
                    android:gravity="center"
                    android:text="@string/viernes"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvSabado"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/espacioDias"
                    android:background="@drawable/valor_apagado"
                    android:gravity="center"
                    android:text="@string/sabado"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvDomingo"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/espacioDias"
                    android:background="@drawable/valor_apagado"
                    android:gravity="center"
                    android:text="@string/domingo"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnMostrarMas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnMostrarMas"
                android:theme="@style/btnPositivo"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>