<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/paddingLateral"
    android:paddingRight="@dimen/paddingVertical"
    android:paddingLeft="@dimen/paddingLateral"
    android:paddingBottom="@dimen/paddingVertical">

    <EditText
        android:id="@+id/txtNombreProfesor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNombreProfesor"
        android:inputType="textPersonName"
        android:layout_marginBottom="@dimen/formularioEspacioCampos"/>

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintCorreElectronico"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="@dimen/formularioEspacioCampos"/>

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintTelefono"
        android:inputType="number"
        android:layout_marginBottom="@dimen/formularioEspacioCampos"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnAfirmativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:theme="@style/btnPositivo"/>

        <Button
            android:id="@+id/btnNegativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/btnAfirmativo"
            android:text="@string/cancelar"
            android:theme="@style/btnNegativo"/>

    </RelativeLayout>
</LinearLayout>