<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/paddingLateral"
    android:paddingTop="@dimen/paddingVertical"
    android:paddingRight="@dimen/paddingLateral"
    android:paddingBottom="@dimen/paddingVertical">

    <EditText
        android:id="@+id/txtTituloTema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/TituloTema"
        android:layout_marginBottom="@dimen/formularioEspacioCampos"/>

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnCamara"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/redondeo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_camera_24px" />

        <ImageButton
            android:id="@+id/btnMicrofono"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/redondeo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_microfono_24px" />

        <Button
            android:id="@+id/btnPositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="32dp"
            android:text="@string/agregar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMicrofono" />

        <Button
            android:id="@+id/btnNegativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancelar"
            app:layout_constraintBottom_toBottomOf="@+id/btnPositivo"
            app:layout_constraintEnd_toStartOf="@+id/btnPositivo"
            app:layout_constraintTop_toTopOf="@+id/btnPositivo" />
    </android.support.constraint.ConstraintLayout>


</LinearLayout>