<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:clickable="true"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/paddingLateral"
        android:paddingRight="@dimen/paddingLateral"
        android:paddingTop="@dimen/paddingVertical"
        android:paddingBottom="@dimen/paddingVertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/marginImgDatos"

            android:contentDescription="@string/decripcionFormularioIcono"
            app:srcCompat="@drawable/ic_lista_profesor_24px" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nombre de profesor" />

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo" />

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>