<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/paddingLateral"
    android:paddingTop="@dimen/paddingVertical"
    android:paddingRight="@dimen/paddingLateral"
    android:paddingBottom="@dimen/paddingVertical"
    tools:context=".vista.AgregarAnotacion">

    <EditText
        android:id="@+id/txtTituloTema"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/formularioEspacioCampos"
        android:hint="@string/TituloTema"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/descripcion"
        android:inputType="textMultiLine" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btnCamara"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/redondeo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_camera_24px" />

        <ImageButton
            android:id="@+id/btnMicrofono"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="76dp"
            android:background="@drawable/redondeo"
            app:layout_constraintBottom_toBottomOf="@+id/btnCamara"
            app:layout_constraintStart_toEndOf="@+id/btnCamara"
            app:layout_constraintTop_toTopOf="@+id/btnCamara"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_microfono_24px" />

        <Button
            android:id="@+id/btnPositivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:text="@string/agregar"
            android:theme="@style/btnPositivo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMicrofono" />

        <Button
            android:id="@+id/btnNegativo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/cancelar"
            android:theme="@style/btnNegativo"
            app:layout_constraintBottom_toBottomOf="@+id/btnPositivo"
            app:layout_constraintEnd_toStartOf="@+id/btnPositivo"
            app:layout_constraintTop_toTopOf="@+id/btnPositivo" />

    </android.support.constraint.ConstraintLayout>

</LinearLayout>